src/generated/SentenceParserParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class SentenceParserParser extends antlr.Parser {
    public static readonly SUBJECT = 1;
    public static readonly DIRECT_OBJECT = 2;
    public static readonly INDIRECT_OBJECT = 3;
    public static readonly VERB = 4;
    public static readonly MODIFIER = 5;
    public static readonly META_MODIFIER = 6;
    public static readonly MOOD = 7;
    public static readonly CONJUNCTION = 8;
    public static readonly DEFINITE_PRONOUN = 9;
    public static readonly INDEFINITE_PRONOUN = 10;
    public static readonly RELATIVE_PRONOUN = 11;
    public static readonly INTENTION = 12;
    public static readonly WHITESPACE = 13;
    public static readonly PUNCTUATION = 14;
    public static readonly RULE_start = 0;
    public static readonly RULE_modifier_clause = 1;
    public static readonly RULE_subject_clause = 2;
    public static readonly RULE_verb_clause = 3;
    public static readonly RULE_direct_object_clause = 4;
    public static readonly RULE_intention_clause = 5;
    public static readonly RULE_entity_clause = 6;
    public static readonly RULE_relative_clause = 7;
    public static readonly RULE_sentence = 8;

    public static readonly literalNames = [
    ];

    public static readonly symbolicNames = [
        null, "SUBJECT", "DIRECT_OBJECT", "INDIRECT_OBJECT", "VERB", "MODIFIER", 
        "META_MODIFIER", "MOOD", "CONJUNCTION", "DEFINITE_PRONOUN", "INDEFINITE_PRONOUN", 
        "RELATIVE_PRONOUN", "INTENTION", "WHITESPACE", "PUNCTUATION"
    ];
    public static readonly ruleNames = [
        "start", "modifier_clause", "subject_clause", "verb_clause", "direct_object_clause", 
        "intention_clause", "entity_clause", "relative_clause", "sentence",
    ];

    public get grammarFileName(): string { return "SentenceParser.g4"; }
    public get literalNames(): (string | null)[] { return SentenceParserParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return SentenceParserParser.symbolicNames; }
    public get ruleNames(): string[] { return SentenceParserParser.ruleNames; }
    public get serializedATN(): number[] { return SentenceParserParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, SentenceParserParser._ATN, SentenceParserParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public start(): StartContext {
        let localContext = new StartContext(this.context, this.state);
        this.enterRule(localContext, 0, SentenceParserParser.RULE_start);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 18;
            this.sentence();
            this.state = 19;
            this.match(SentenceParserParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public modifier_clause(): Modifier_clauseContext;
    public modifier_clause(_p: number): Modifier_clauseContext;
    public modifier_clause(_p?: number): Modifier_clauseContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new Modifier_clauseContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 2;
        this.enterRecursionRule(localContext, 2, SentenceParserParser.RULE_modifier_clause, _p);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            {
            this.state = 22;
            this.match(SentenceParserParser.MODIFIER);
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 28;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 0, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    {
                    localContext = new Modifier_clauseContext(parentContext, parentState);
                    this.pushNewRecursionContext(localContext, _startState, SentenceParserParser.RULE_modifier_clause);
                    this.state = 24;
                    if (!(this.precpred(this.context, 1))) {
                        throw this.createFailedPredicateException("this.precpred(this.context, 1)");
                    }
                    this.state = 25;
                    this.match(SentenceParserParser.META_MODIFIER);
                    }
                    }
                }
                this.state = 30;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 0, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public subject_clause(): Subject_clauseContext {
        let localContext = new Subject_clauseContext(this.context, this.state);
        this.enterRule(localContext, 4, SentenceParserParser.RULE_subject_clause);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 32;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 9 || _la === 10) {
                {
                this.state = 31;
                _la = this.tokenStream.LA(1);
                if(!(_la === 9 || _la === 10)) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
            }

            this.state = 34;
            this.match(SentenceParserParser.SUBJECT);
            this.state = 38;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 5) {
                {
                {
                this.state = 35;
                this.modifier_clause(0);
                }
                }
                this.state = 40;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public verb_clause(): Verb_clauseContext {
        let localContext = new Verb_clauseContext(this.context, this.state);
        this.enterRule(localContext, 6, SentenceParserParser.RULE_verb_clause);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 41;
            this.match(SentenceParserParser.VERB);
            this.state = 45;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 5) {
                {
                {
                this.state = 42;
                this.modifier_clause(0);
                }
                }
                this.state = 47;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public direct_object_clause(): Direct_object_clauseContext {
        let localContext = new Direct_object_clauseContext(this.context, this.state);
        this.enterRule(localContext, 8, SentenceParserParser.RULE_direct_object_clause);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 49;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 9 || _la === 10) {
                {
                this.state = 48;
                _la = this.tokenStream.LA(1);
                if(!(_la === 9 || _la === 10)) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
            }

            this.state = 51;
            this.match(SentenceParserParser.DIRECT_OBJECT);
            this.state = 55;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 5) {
                {
                {
                this.state = 52;
                this.modifier_clause(0);
                }
                }
                this.state = 57;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public intention_clause(): Intention_clauseContext {
        let localContext = new Intention_clauseContext(this.context, this.state);
        this.enterRule(localContext, 10, SentenceParserParser.RULE_intention_clause);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 58;
            this.match(SentenceParserParser.INTENTION);
            this.state = 62;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 5) {
                {
                {
                this.state = 59;
                this.modifier_clause(0);
                }
                }
                this.state = 64;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public entity_clause(): Entity_clauseContext {
        let localContext = new Entity_clauseContext(this.context, this.state);
        this.enterRule(localContext, 12, SentenceParserParser.RULE_entity_clause);
        try {
            this.state = 69;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 7, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 65;
                this.subject_clause();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 66;
                this.verb_clause();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 67;
                this.direct_object_clause();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 68;
                this.intention_clause();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public relative_clause(): Relative_clauseContext {
        let localContext = new Relative_clauseContext(this.context, this.state);
        this.enterRule(localContext, 14, SentenceParserParser.RULE_relative_clause);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 71;
            this.match(SentenceParserParser.RELATIVE_PRONOUN);
            this.state = 73;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 72;
                this.entity_clause();
                }
                }
                this.state = 75;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 5654) !== 0));
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public sentence(): SentenceContext {
        let localContext = new SentenceContext(this.context, this.state);
        this.enterRule(localContext, 16, SentenceParserParser.RULE_sentence);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 78;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 77;
                this.entity_clause();
                }
                }
                this.state = 80;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 5654) !== 0));
            this.state = 83;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 11) {
                {
                this.state = 82;
                this.relative_clause();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public override sempred(localContext: antlr.ParserRuleContext | null, ruleIndex: number, predIndex: number): boolean {
        switch (ruleIndex) {
        case 1:
            return this.modifier_clause_sempred(localContext as Modifier_clauseContext, predIndex);
        }
        return true;
    }
    private modifier_clause_sempred(localContext: Modifier_clauseContext | null, predIndex: number): boolean {
        switch (predIndex) {
        case 0:
            return this.precpred(this.context, 1);
        }
        return true;
    }


    private static __ATN: antlr.ATN;
    public static get _ATN(): antlr.ATN {
        if (!SentenceParserParser.__ATN) {
            SentenceParserParser.__ATN = new antlr.ATNDeserializer().deserialize(SentenceParserParser._serializedATN);
        }

        return SentenceParserParser.__ATN;
    }


    private static readonly vocabulary = new antlr.Vocabulary(SentenceParserParser.literalNames, SentenceParserParser.symbolicNames, []);

    public override get vocabulary(): antlr.Vocabulary {
        return SentenceParserParser.vocabulary;
    }

    private static readonly decisionsToDFA = SentenceParserParser._ATN.decisionToState.map( (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index) );
}

export class StartContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public sentence(): SentenceContext {
        return this.getRuleContext(0, SentenceContext)!;
    }
    public EOF(): antlr.TerminalNode {
        return this.getToken(SentenceParserParser.EOF, 0)!;
    }
    public override get ruleIndex(): number {
        return SentenceParserParser.RULE_start;
    }
}


export class Modifier_clauseContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public MODIFIER(): antlr.TerminalNode | null {
        return this.getToken(SentenceParserParser.MODIFIER, 0);
    }
    public modifier_clause(): Modifier_clauseContext | null {
        return this.getRuleContext(0, Modifier_clauseContext);
    }
    public META_MODIFIER(): antlr.TerminalNode | null {
        return this.getToken(SentenceParserParser.META_MODIFIER, 0);
    }
    public override get ruleIndex(): number {
        return SentenceParserParser.RULE_modifier_clause;
    }
}


export class Subject_clauseContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public SUBJECT(): antlr.TerminalNode {
        return this.getToken(SentenceParserParser.SUBJECT, 0)!;
    }
    public modifier_clause(): Modifier_clauseContext[];
    public modifier_clause(i: number): Modifier_clauseContext | null;
    public modifier_clause(i?: number): Modifier_clauseContext[] | Modifier_clauseContext | null {
        if (i === undefined) {
            return this.getRuleContexts(Modifier_clauseContext);
        }

        return this.getRuleContext(i, Modifier_clauseContext);
    }
    public DEFINITE_PRONOUN(): antlr.TerminalNode | null {
        return this.getToken(SentenceParserParser.DEFINITE_PRONOUN, 0);
    }
    public INDEFINITE_PRONOUN(): antlr.TerminalNode | null {
        return this.getToken(SentenceParserParser.INDEFINITE_PRONOUN, 0);
    }
    public override get ruleIndex(): number {
        return SentenceParserParser.RULE_subject_clause;
    }
}


export class Verb_clauseContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public VERB(): antlr.TerminalNode {
        return this.getToken(SentenceParserParser.VERB, 0)!;
    }
    public modifier_clause(): Modifier_clauseContext[];
    public modifier_clause(i: number): Modifier_clauseContext | null;
    public modifier_clause(i?: number): Modifier_clauseContext[] | Modifier_clauseContext | null {
        if (i === undefined) {
            return this.getRuleContexts(Modifier_clauseContext);
        }

        return this.getRuleContext(i, Modifier_clauseContext);
    }
    public override get ruleIndex(): number {
        return SentenceParserParser.RULE_verb_clause;
    }
}


export class Direct_object_clauseContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public DIRECT_OBJECT(): antlr.TerminalNode {
        return this.getToken(SentenceParserParser.DIRECT_OBJECT, 0)!;
    }
    public modifier_clause(): Modifier_clauseContext[];
    public modifier_clause(i: number): Modifier_clauseContext | null;
    public modifier_clause(i?: number): Modifier_clauseContext[] | Modifier_clauseContext | null {
        if (i === undefined) {
            return this.getRuleContexts(Modifier_clauseContext);
        }

        return this.getRuleContext(i, Modifier_clauseContext);
    }
    public DEFINITE_PRONOUN(): antlr.TerminalNode | null {
        return this.getToken(SentenceParserParser.DEFINITE_PRONOUN, 0);
    }
    public INDEFINITE_PRONOUN(): antlr.TerminalNode | null {
        return this.getToken(SentenceParserParser.INDEFINITE_PRONOUN, 0);
    }
    public override get ruleIndex(): number {
        return SentenceParserParser.RULE_direct_object_clause;
    }
}


export class Intention_clauseContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public INTENTION(): antlr.TerminalNode {
        return this.getToken(SentenceParserParser.INTENTION, 0)!;
    }
    public modifier_clause(): Modifier_clauseContext[];
    public modifier_clause(i: number): Modifier_clauseContext | null;
    public modifier_clause(i?: number): Modifier_clauseContext[] | Modifier_clauseContext | null {
        if (i === undefined) {
            return this.getRuleContexts(Modifier_clauseContext);
        }

        return this.getRuleContext(i, Modifier_clauseContext);
    }
    public override get ruleIndex(): number {
        return SentenceParserParser.RULE_intention_clause;
    }
}


export class Entity_clauseContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public subject_clause(): Subject_clauseContext | null {
        return this.getRuleContext(0, Subject_clauseContext);
    }
    public verb_clause(): Verb_clauseContext | null {
        return this.getRuleContext(0, Verb_clauseContext);
    }
    public direct_object_clause(): Direct_object_clauseContext | null {
        return this.getRuleContext(0, Direct_object_clauseContext);
    }
    public intention_clause(): Intention_clauseContext | null {
        return this.getRuleContext(0, Intention_clauseContext);
    }
    public override get ruleIndex(): number {
        return SentenceParserParser.RULE_entity_clause;
    }
}


export class Relative_clauseContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public RELATIVE_PRONOUN(): antlr.TerminalNode {
        return this.getToken(SentenceParserParser.RELATIVE_PRONOUN, 0)!;
    }
    public entity_clause(): Entity_clauseContext[];
    public entity_clause(i: number): Entity_clauseContext | null;
    public entity_clause(i?: number): Entity_clauseContext[] | Entity_clauseContext | null {
        if (i === undefined) {
            return this.getRuleContexts(Entity_clauseContext);
        }

        return this.getRuleContext(i, Entity_clauseContext);
    }
    public override get ruleIndex(): number {
        return SentenceParserParser.RULE_relative_clause;
    }
}


export class SentenceContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public entity_clause(): Entity_clauseContext[];
    public entity_clause(i: number): Entity_clauseContext | null;
    public entity_clause(i?: number): Entity_clauseContext[] | Entity_clauseContext | null {
        if (i === undefined) {
            return this.getRuleContexts(Entity_clauseContext);
        }

        return this.getRuleContext(i, Entity_clauseContext);
    }
    public relative_clause(): Relative_clauseContext | null {
        return this.getRuleContext(0, Relative_clauseContext);
    }
    public override get ruleIndex(): number {
        return SentenceParserParser.RULE_sentence;
    }
}
